Made changes to css And added Comments.

--- a/Html/index.html
+++ b/Html/index.html
@@ -32,7 +32,7 @@
                                 <h3 class="contentTitle">Campus Community</h3>
                                 <p class="description">Funcode gonna change your life.Now you won't need to take a Wordfile of Student records.
                                     Hoping you ain't Student Signing up as Teacher!! haha.
-                                </p><a class="linkBusiness" href="">Join now</a>
+                                </p><a class="loginPage" href="">Join now</a>
                             </div>
                         </div>
                         <div class="flexitem">
@@ -40,7 +40,7 @@
                                 <h3 class="contentTitle">Coding is Fun</h3>
                                 <p class="description">Have you ever bored of Wordfile for submitting your Assignments?? If Yes, No Worries! from now on.
                                     You won't need to do it.Sign up for free.
-                                </p><a class="linkDev" href="">Join now</a>
+                                </p><a class="LoginPage" href="">Join now</a>
                             </div>
                         </div>
                     </div>
