--- a/Html/index.html
+++ b/Html/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <title>Funcode - Online Judge System</title>
        
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="../CSS/Styles.css">
 </head>
 
 <body>
