Updated Style and Added Img into Box

--- a/Html/Page2.html
+++ b/Html/Page2.html
@@ -1,18 +1,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="../CSS/Page2Style.css" />
-  </head>
-  <body>
     <div class="Header">
       <p class="smallheader">Select Your</p>
       <h1 class="subhead">Semester</h1>
     </div>
-
+  </head>
+  <body>
     <div class="Box">
       <p class="boxtitle">Semester - 1</p>
       <h1 class="boxheader">The Problem Solving Through C</h1>
       <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
       <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
+      <img class="c-adjust" src="../img/C.png" />
     </div>
 
     <div class="Box">
@@ -20,6 +20,7 @@
       <h1 class="boxheader">OOP with C++</h1>
       <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
       <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
+      <img src="../img/C++.png" />
     </div>
 
     <div class="Box">
@@ -27,6 +28,7 @@
       <h1 class="boxheader">Programming With Java</h1>
       <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
       <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
+      <img src="../img/Java.png" />
     </div>
 
     <div class="Box">
@@ -34,6 +36,7 @@
       <h1 class="boxheader">Python Programming</h1>
       <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
       <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
+      <img src="../img/Python.png" />
     </div>
   </body>
 </html>
