HTML: Removed Page2 Modified index and added Profile and main

--- a/Html/index.html
+++ b/Html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8"/>
-    <title>Funcode - Online Judge System</title>
+    <title>Online Judge System</title>
        
     <link rel="stylesheet" href="../CSS/Styles.css">
 </head>
@@ -15,7 +15,7 @@
                     <div class="flex">
                         <div class="flexItemLogo">
                             <div class="logo"><img alt="Logo"
-                                    src="" />
+                                    src="../img/Animated1.gif" />
                             </div>
                         </div>
                         <div class="buttons">
@@ -24,12 +24,12 @@
                     </div>
                 </div>
                 <div class="main">
-                    <h1 class="title">This is where you will code Submit the Code!!</h1>
+                    <h1 class="title">This is where you will Submit the Code!!</h1>
                     <div class="flexitemWrap">
                         <div class="flexitem">
                             <div class="contentWrap"><span class="sectionTitle">Teachers</span>
                                 <h3 class="contentTitle">Campus Community</h3>
-                                <p class="description">Funcode gonna change your life.Now you won't need to take a Wordfile of Student records.
+                                <p class="description">Now you won't need to take a Wordfile of Student records.
                                     Hoping you ain't Student Signing up as Teacher!! haha.
                                 </p><a class="loginPage" href="">Join now</a>
                             </div>
@@ -39,11 +39,13 @@
                                 <h3 class="contentTitle">Coding is Fun</h3>
                                 <p class="description">Have you ever bored of Wordfile for submitting your Assignments?? If Yes, No Worries! from now on.
                                     You won't need to do it.Sign up for free.
-                                </p><a class="LoginPage" href="">Join now</a>
+                                </p><a class="LoginPage" href="main.html">Join now</a>
                             </div>
                         </div>
                     </div>
-            
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
