--- a/Html/main.html
+++ b/Html/main.html
@@ -46,7 +46,7 @@
         <p class="boxtitle">Semester - 3</p>
         <h1 class="boxheader">Programming With Java</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="Problem.html">Start Learning</a></div>
         <img class = "Boximg" src="../img/Java.png" alt = "Java"/>
     </div>
 
@@ -57,7 +57,7 @@
         <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
         <img class = "Boximg" src="../img/Python.png" alt = "Python" />
     </div>
-    <hr>
+    <hr id = "Dotted-hr">
 </div>
 </body>
 
