--- a/Html/Profile.html
+++ b/Html/Profile.html
@@ -13,7 +13,7 @@
       <li><a href = "#">Practice</a></li>
       <li><a href = "#">Leaderboard</a></li>
       <li><a href = "#">Notification</a></li>
-      <li><a href = "#">Profile</a></li>
+      <li><a href = "Profile.html">Profile</a></li>
     </ul>
     <img class = "headerPic" src = "../img/OnlineSystem.gif" alt = "AnimatedGif"/>
   </nav>
