--- a/Html/index.html
+++ b/Html/index.html
@@ -39,7 +39,7 @@
                                 <h3 class="contentTitle">Coding is Fun</h3>
                                 <p class="description">Have you ever bored of Wordfile for submitting your Assignments?? If Yes, No Worries! from now on.
                                     You won't need to do it.Sign up for free.
-                                </p><a class="LoginPage" href="/Html/login_register.html">Join now</a>
+                                </p><a class="LoginPage" href="login_register.html">Join now</a>
                             </div>
                         </div>
                     </div>
